agrego estrategia greedy